# bvg-departures

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: departures.rs  mod.rs
src/view/: mod.rs  std_out.rs  tui.rs
