[package]
name = "bvg-departures"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
thiserror = "2.0.17"
url = "2.5.7"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
serde_yaml = "0.9.34"
clap = { version = "4.5.51", features = ["derive"] }
log = "0.4.28"
tracing = "0.1"
tracing-subscriber = "0.3"
crossterm = "0.27"
tui = "0.19"
colored = "3.0.0"
